update project name

--- a/garten-bewaesserung-vue-app/package.json
+++ b/garten-bewaesserung-vue-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "garten-bewaesserung-app",
+  "name": "garten-bewaesserung-vue-app",
   "version": "0.0.0",
   "private": true,
   "type": "module",
